# DTLN

./: .gitignore  README.md  analyze_vivos_duration.py  check_audio.py  check_dataset.py  check_vivos_dataset.py  create_dataset_from_dns_vivos.py  create_vivos_dataset.sh  evaluate.py  file_mapping_val.csv  model.py  pyproject.toml  test.py  train.py  train_vivos.py  train_vivos_colab.ipynb
dtln.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
evaluation_results/: detailed_results.csv  summary.json
models_DTLN_vivos/: DTLN_vivos.h5  DTLN_vivos_latest.h5
test_package/: README.md  compare_audio.py  test_dtln_inference.py
