[project]
name = "dtln"
version = "0.1.0"
requires-python = ">=3.9,<3.11"

dependencies = [
    # --- THÊM DÒNG NÀY ---
    # Ép buộc cài "ruột" của Tensorflow cho Windows
    "tensorflow-intel==2.15.0; sys_platform == 'win32'",
    # Vẫn giữ cái vỏ để đảm bảo tương thích code
    "tensorflow==2.15.0",
    # ---------------------
    # Audio processing
    "librosa>=0.10.0,<0.11.0",
    "soundfile>=0.12.0,<0.13.0",
    "audioread>=3.0.0,<4.0.0",
    "resampy>=0.4.0,<0.5.0",
    "wavinfo>=3.0.0,<4.0.0",
    # Scientific computing
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "numba>=0.58.0,<0.59.0",
    # Visualization
    "matplotlib>=3.7.0,<4.0.0",
    # Data
    "h5py>=3.9.0,<4.0.0",
    "pandas>=2.0.0,<3.0.0",
    # Utils
    "click>=8.1.0,<9.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "seaborn>=0.13.2",
    "pesq>=0.0.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
]

[tool.uv]
override-dependencies = [
    # Chặn lỗi version 0.37.1
    "tensorflow-io-gcs-filesystem==0.31.0; sys_platform == 'win32'"
]
